syntax = "proto3";
package hub.hub;

import "gogoproto/gogo.proto";
import "hub/params.proto";
import "hub/student_info.proto";
import "hub/transcript_of_records.proto";
import "hub/personal_info.proto";
import "hub/residence_info.proto";
import "hub/contact_info.proto";
import "hub/taxes_info.proto";
import "hub/erasmus_info.proto";
import "hub/stored_student.proto";
import "hub/chain_info.proto";
import "hub/universities.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "hub/x/hub/types";

// GenesisState defines the hub module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  StudentInfo studentInfo = 3;
  TranscriptOfRecords transcriptOfRecords = 4;
  PersonalInfo personalInfo = 5;
  ResidenceInfo residenceInfo = 6;
  ContactInfo contactInfo = 7;
  TaxesInfo taxesInfo = 8;
  ErasmusInfo erasmusInfo = 9;
  repeated StoredStudent storedStudentList = 10 [(gogoproto.nullable) = false];
  ChainInfo chainInfo = 11 [(gogoproto.nullable) = false];
  repeated Universities universitiesList = 12 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
